# tuuba

./: Cargo.toml
src/: app.rs  lib.rs  main.rs
src/client/: mod.rs  page.rs  playback_data.rs
src/client/api/: error.rs  instance.rs  mod.rs
src/client/api/types/: account.rs  account_summary.rs  actor_image.rs  mod.rs  video.rs  video_channel.rs  video_channel_summary.rs  video_details.rs  video_file.rs  video_streaming_playlists.rs  videos.rs
src/gui/: mod.rs  style.rs
src/gui/pages/: feed_page.rs  loading_page.rs  mod.rs  video_page.rs
src/gui/panels/: info_sidebar.rs  mod.rs  nav_sidebar.rs  nav_sidebar_collapsed.rs  site_header.rs
src/gui/widgets/: community_identifier.rs  loading_spinner.rs  mod.rs  nav_button.rs  person_identifier.rs  post_compact.rs  thumbnail.rs  video_player.rs  videos_list.rs  vote_bar.rs
