[package]
name = "tuuba"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
eframe = "0.31.1"
egui = "*"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "*", features = ["jpeg", "png"] }
ndarray = "0.16.1"
reqwest = "0.12.20"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
video-rs = { version = "0.10.3", features = ["ndarray"] }
